--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 	<script src="https://code.angularjs.org/2.0.0-beta.0/Rx.js"></script>
 	<script src="https://code.angularjs.org/2.0.0-beta.0/angular2.min.js"></script>
 	<script src="https://code.angularjs.org/2.0.0-beta.0/http.min.js"></script>
-	<script>
-	System.import('app').catch(console.error.bind(console));
-	</script>
+	<script>System.import('app')</script>
+	
+	<script src="/node_modules/whiplinker/dist/whiplinker.js"></script>
 </head>
 <body>
-	<function-container>loading...</function-container>
-	<function-container>loading...</function-container>
+	<my-app></my-app>
 </body>
 </html>
