--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>angular2 playground</title>
+	<title>Pure Function Visualizer</title>
 	<link rel="stylesheet" href="style.css" />
 	<script src="https://code.angularjs.org/2.0.0-beta.0/angular2-polyfills.js"></script>
 	<script src="https://code.angularjs.org/tools/system.js"></script>
