add drag/drop sidebar; major renames+cleanups

--- a/index.html
+++ b/index.html
@@ -14,7 +14,5 @@
 	
 	<script src="/node_modules/whiplinker/dist/whiplinker.js"></script>
 </head>
-<body>
-	<my-app></my-app>
-</body>
+<body my-app class="flex-row flex-grow"></body>
 </html>
