add remove button; more renames

--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 	
 	<script src="/node_modules/whiplinker/dist/whiplinker.js"></script>
 </head>
-<body my-app class="flex-row flex-grow"></body>
+<body pf-visualizer class="flex-row flex-grow"></body>
 </html>
