--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="https://code.angularjs.org/2.0.0-beta.0/http.min.js"></script>
 	<script>System.import('app')</script>
 	
-	<script src="/node_modules/whiplinker/dist/whiplinker.js"></script>
+	<script src="https://cdn.rawgit.com/mismith/whiplinker/gh-pages/dist/whiplinker.js"></script>
 </head>
 <body pf-visualizer class="flex-row flex-grow"></body>
 </html>
