update for gh-pages

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 	<title>Pure Function Visualizer</title>
 	<link rel="stylesheet" href="style.css" />
 
-	<script src="https://code.angularjs.org/2.0.0-beta.0/angular2-polyfills.js"></script>
-	<script src="https://code.angularjs.org/tools/system.js"></script>
-	<script src="https://code.angularjs.org/tools/typescript.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/angular/code.angularjs.org@master/2.0.0-beta.0/angular2-polyfills.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/angular/code.angularjs.org@master/tools/system.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/angular/code.angularjs.org@master/tools/typescript.js"></script>
 	<script src="config.js"></script>
-	<script src="https://code.angularjs.org/2.0.0-beta.0/Rx.js"></script>
-	<script src="https://code.angularjs.org/2.0.0-beta.0/angular2.min.js"></script>
-	<script src="https://code.angularjs.org/2.0.0-beta.0/http.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/angular/code.angularjs.org@master/2.0.0-beta.0/Rx.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/angular/code.angularjs.org@master/2.0.0-beta.0/angular2.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/angular/code.angularjs.org@master/2.0.0-beta.0/http.min.js"></script>
 	<script>System.import('app')</script>
 
-	<script src="https://cdn.rawgit.com/MaxArt2501/object-observe/0.2.6/dist/object-observe.min.js"></script>
-	<script src="https://rawgit.com/mismith/whiplinker/gh-pages/dist/whiplinker.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/MaxArt2501/object-observe@0.2.6/dist/object-observe.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/mismith/whiplinker@gh-pages/dist/whiplinker.js"></script>
 </head>
 <body pf-visualizer class="flex-row flex-grow"></body>
 </html>
